--- a/index.html
+++ b/index.html
@@ -209,23 +209,104 @@
                     </ul>
                     <div class="works-tabs__items-wrapper">
                         <div class="works-tabs__items">
-                            <img src="img/work-1.jpg" alt="Work" class="works-tabs__item">
-                            <img src="img/work-2.jpg" alt="Work" class="works-tabs__item">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-1.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 1</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-1.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-2.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 2</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-2.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="works-tabs__items">
-                            <img src="img/work-3.jpg" alt="Work" class="works-tabs__item">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-3.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 3</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-3.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="works-tabs__items">
-                            <img src="img/work-4.jpg" alt="Work" class="works-tabs__item">
-                            <img src="img/work-5.jpg" alt="Work" class="works-tabs__item">
-                            <img src="img/work-6.jpg" alt="Work" class="works-tabs__item">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-4.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 4</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-4.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-5.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 5</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-5.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-6.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 6</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-6.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="works-tabs__items">
-                            <img src="img/work-7.jpg" alt="Work" class="works-tabs__item">
-                            <img src="img/work-8.jpg" alt="Work" class="works-tabs__item">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-7.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 7</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-7.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-8.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 8</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-8.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="works-tabs__items">
-                            <img src="img/work-9.jpg" alt="Work" class="works-tabs__item">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-9.jpg" alt="Work" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Work 9</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <a target="_blank" href="img/work-9.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
