--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Startup</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
         <div class="container">
             <div class="section-inner">
                 <div class="section-intro about__intro">
-                    <h2 class="section-intro__heading">
+                    <h3 class="section-intro__heading">
                         ABOUT US
-                    </h2>
+                    </h3>
                     <div class="section-intro__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
                     </div>
@@ -185,9 +185,9 @@
         <div class="container">
             <div class="section-inner">
                 <div class="section-intro">
-                    <h2 class="section-intro__heading">
+                    <h3 class="section-intro__heading">
                         latest works
-                    </h2>
+                    </h3>
                 </div>
                 <div class="works__tabs works-tabs">
                     <ul class="works-tabs__tabs">
@@ -210,100 +210,100 @@
                     <div class="works-tabs__items-wrapper">
                         <div class="works-tabs__items">
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-1.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-1.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 1</div>
+                                        <div class="works-tabs__item-hovered-heading">Fan</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-1.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-2.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-2.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 2</div>
+                                        <div class="works-tabs__item-hovered-heading">Bird</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-2.jpg" class="works-tabs__item-hovered-btn">View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="works-tabs__items">
-                            <div class="works-tabs__item-wrapper">
-                                <img src="img/work-3.jpg" alt="Work" class="works-tabs__item">
-                                <div class="works-tabs__item-hovered">
-                                    <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 3</div>
-                                        <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-3.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="works-tabs__items">
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-4.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-3.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 4</div>
+                                        <div class="works-tabs__item-hovered-heading">Office 1</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-4.jpg" class="works-tabs__item-hovered-btn">View</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="works-tabs__item-wrapper">
-                                <img src="img/work-5.jpg" alt="Work" class="works-tabs__item">
-                                <div class="works-tabs__item-hovered">
-                                    <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 5</div>
-                                        <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-5.jpg" class="works-tabs__item-hovered-btn">View</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="works-tabs__item-wrapper">
-                                <img src="img/work-6.jpg" alt="Work" class="works-tabs__item">
-                                <div class="works-tabs__item-hovered">
-                                    <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 6</div>
-                                        <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-6.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="works-tabs__items">
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-7.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-4.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 7</div>
+                                        <div class="works-tabs__item-hovered-heading">Camera</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-7.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-8.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-5.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 8</div>
+                                        <div class="works-tabs__item-hovered-heading">Bicycle</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-8.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-6.jpg" alt="" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Note</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="works-tabs__items">
                             <div class="works-tabs__item-wrapper">
-                                <img src="img/work-9.jpg" alt="Work" class="works-tabs__item">
+                                <img src="img/work-7.jpg" alt="" class="works-tabs__item">
                                 <div class="works-tabs__item-hovered">
                                     <div class="works-tabs__item-hovered-wrapper">
-                                        <div class="works-tabs__item-hovered-heading">Work 9</div>
+                                        <div class="works-tabs__item-hovered-heading">Office 2</div>
                                         <div class="works-tabs__item-hovered-text">Description</div>
-                                        <a target="_blank" href="img/work-9.jpg" class="works-tabs__item-hovered-btn">View</a>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-8.jpg" alt="" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Office 3</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="works-tabs__items">
+                            <div class="works-tabs__item-wrapper">
+                                <img src="img/work-9.jpg" alt="" class="works-tabs__item">
+                                <div class="works-tabs__item-hovered">
+                                    <div class="works-tabs__item-hovered-wrapper">
+                                        <div class="works-tabs__item-hovered-heading">Book</div>
+                                        <div class="works-tabs__item-hovered-text">Description</div>
+                                        <div class="works-tabs__item-hovered-btn">View</div>
                                     </div>
                                 </div>
                             </div>
@@ -313,9 +313,85 @@
             </div>
         </div>
     </section>
+    <section class="get-form">
+        <div class="container">
+            <div class="section-inner">
+                <div class="section-intro get-form__intro">
+                    <h3 class="section-intro__heading">
+                        get in touch
+                    </h3>
+                    <div class="section-intro__text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
+                    </div>
+                </div>
+                <div class="get-form__content">
+                    <ul class="get-form__list get-form-list">
+                        <li class="get-form-list__item">
+                            <h4 class="get-form-list__heading">
+                                address
+                            </h4>
+                            <address>
+                                312, 7th Ave, New York<br>NY 101200, United States of America
+                            </address>
+                        </li>
+                        <li class="get-form-list__item">
+                            <h4 class="get-form-list__heading">
+                                HOTLINE (24X7)
+                            </h4>
+                            <div>
+                                <a href="tel:+650052300">+65 0052 300</a>,
+                                <a href="tel:+6588251210">+65 88251 210</a><br>
+                                <a href="tel:+8801723511340">+88 01723 511 340</a>
+                            </div>
+                        </li>
+                        <li class="get-form-list__item">
+                            <h4 class="get-form-list__heading">
+                                e-mail
+                            </h4>
+                            <div>
+                                <a href="mailto:shapedtheme@gmail.com">shapedtheme@gmail.com</a><br>
+                                <a href="mailto:khalilkode@gmail.com">khalilkode@gmail.com</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <form class="form" id="form-1" action="#">
+                        <div class="form__input-wrapper">
+                            <div class="form__input-error">
+                                <input class="form__input" placeholder="YOUR NAME" name="name" type="text">
+                            </div>
+                            <div class="form__input-error">
+                                <input class="form__input" placeholder="YOUR E-MAIL" name="email" type="email">
+                            </div>
+                            <div class="form__input-error">
+                                <input class="form__input" placeholder="YOUR SUBJUCT" name="subject" type="text">
+                            </div>
+                            <div class="form__input-error">
+                                <input class="form__input" placeholder="YOUR COMPANY NAME" name="company-name" type="text">
+                            </div>
+                        </div>
+                        <div class="form__message-error">
+                            <textarea class="form__message" placeholder="WRITE YOUR MESSAGE" name="message" type="text"></textarea>
+                        </div>
+                        <div class="form__button-alert-wrapper">
+                            <button class="btn form__btn">
+                                send message
+                            </button>
+                            <div class="form__alert">
+                                <span class="font-red">*</span> We’ll contact you as as possible. We don’t reply on Monday.
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="modal">
+        <img class="modal__photo" src="" alt="">
+    </div>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
