Префинальная версия без адаптации

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                             </div>
                         </li>
                     </ul>
-                    <form class="form" id="form-1" action="mailer.php" method="POST">
+                    <form class="form" id="form-1" action="mailer/mailer.php" method="POST">
                         <div class="form__input-wrapper">
                             <div class="form__input-error">
                                 <input class="form__input" placeholder="YOUR NAME" name="name" type="text">
@@ -566,7 +566,7 @@
                             <textarea class="form__message" placeholder="WRITE YOUR MESSAGE" name="message"></textarea>
                         </div>
                         <div class="form__button-alert-wrapper">
-                            <button type="button" class="btn form__btn">
+                            <button type="submit" class="btn form__btn">
                                 send message
                             </button>
                             <div class="form__alert">
@@ -609,7 +609,7 @@
     </a>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
